--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -28,6 +29,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation project(':android-tru-forms')
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation "com.android.support:support-vector-drawable:$support_library_version"
 
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
