--- a/android-tru-forms/src/main/AndroidManifest.xml
+++ b/android-tru-forms/src/main/AndroidManifest.xml
@@ -1,2 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.trufla.androidtruforms" />
+    package="com.trufla.androidtruforms"> <!-- To access Google+ APIs: -->
+    <uses-permission android:name="android.permission.INTERNET" />
+
+</manifest>
