--- a/android-tru-forms/build.gradle
+++ b/android-tru-forms/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation "com.android.support:cardview-v7:$support_library_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
     implementation "com.android.support:support-vector-drawable:$support_library_version"
+    implementation 'com.github.esafirm.android-image-picker:imagepicker:1.13.1'
 
     implementation 'com.android.support:support-v4:27.1.1'
     implementation 'com.google.android.gms:play-services-plus:15.0.1'
