--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,9 @@ android {
     dataBinding {
         enabled = true
     }
+    dexOptions {
+        javaMaxHeapSize "1g"
+    }
 }
 
 dependencies {
