--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".TestFormFragment">
 
         </activity>
         <activity
-            android:name=".FistActivity"
+            android:name=".TestFormActivity"
             android:label="@string/title_activity_fist"
             android:theme="@style/AppTheme">
             <intent-filter>
