feat:: open image picker and extract image as base64 in json representation

--- a/android-tru-forms/src/main/AndroidManifest.xml
+++ b/android-tru-forms/src/main/AndroidManifest.xml
@@ -4,6 +4,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application>
         <activity
-            android:name="com.trufla.androidtruforms.FormActivity" />
+            android:name="com.trufla.androidtruforms.TruFormActivity" />
     </application>
 </manifest>
