--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation project(':android-tru-forms')
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation "com.android.support:support-vector-drawable:$support_library_version"
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 
     implementation 'com.android.support:design:27.1.1'
     testImplementation 'junit:junit:4.12'
