--- a/android-tru-forms/src/main/AndroidManifest.xml
+++ b/android-tru-forms/src/main/AndroidManifest.xml
@@ -2,8 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.trufla.androidtruforms"> <!-- To access Google+ APIs: -->
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application>
+        <activity android:name=".TruFormActivity" />
         <activity
-            android:name="com.trufla.androidtruforms.TruFormActivity" />
+            android:name=".TruNavigationActivity"
+            android:label="@string/title_activity_tru_navigation"
+            android:theme="@style/AppTheme"></activity>
     </application>
+
 </manifest>
