--- a/android-tru-forms/build.gradle
+++ b/android-tru-forms/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
+    //Apache TextUtils
+    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.3'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
