--- a/android-tru-forms/build.gradle
+++ b/android-tru-forms/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'com.github.esafirm.android-image-picker:imagepicker:1.8.0'
+//    implementation 'com.github.esafirm.android-image-picker:imagepicker:1.8.0'
 
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.gms:play-services-plus:15.0.1'
