--- a/android-tru-forms/build.gradle
+++ b/android-tru-forms/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 29
     defaultConfig {
-        minSdkVersion 17
+        minSdkVersion 21
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
@@ -41,11 +41,27 @@ dependencies {
     implementation 'com.google.android.gms:play-services-plus:15.0.1'
     api 'com.squareup.okhttp3:okhttp:3.11.0'
     implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
-    implementation 'com.github.apl-devs:appintro:v4.2.3'
+    //  implementation 'com.github.apl-devs:appintro:v4.2.3'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
 
     //Apache TextUtils
     implementation group: 'org.apache.commons', name: 'commons-text', version: '1.3'
+
+
+    // compress pdf
+    implementation ('com.lowagie:itext:2.1.7+') {
+        exclude group: "bouncycastle"
+    }
+    // thumb of pdf
+    implementation 'com.github.barteksc:pdfium-android:1.4.0'
+
+    //access storage
+    implementation 'com.snatik:storage:2.1.0@aar'
+    //PDF view
+    implementation "com.pdfview:pdfview-android:1.0.0"
+
+    //zoom imageview
+    implementation 'com.github.chrisbanes:PhotoView:2.0.0'
 
 
     testImplementation 'junit:junit:4.12'
