fix crash of pdfviewer library

--- a/android-tru-forms/build.gradle
+++ b/android-tru-forms/build.gradle
@@ -11,6 +11,11 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
+        ndk {
+            abiFilters "armeabi-v7a", "x86", "armeabi", "mips"
+        }
+
+
 
     }
 
