--- a/android-tru-forms/build.gradle
+++ b/android-tru-forms/build.gradle
@@ -15,6 +15,9 @@ android {
             abiFilters "armeabi-v7a", "x86", "armeabi", "mips"
         }
 
+        lintOptions {
+            abortOnError false
+        }
 
 
     }
