--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,9 @@ buildscript {
 
     repositories {
         google()
-        jcenter()
         mavenCentral()
+        jcenter()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.2'
@@ -22,6 +23,7 @@ buildscript {
 allprojects {
     repositories {
         google()
+        mavenCentral()
         jcenter()
         maven { url "https://jitpack.io" }
 
