--- a/android-tru-forms/build.gradle
+++ b/android-tru-forms/build.gradle
@@ -79,3 +79,14 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
     implementation 'androidx.exifinterface:exifinterface:1.2.0-beta01'
 }
+afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                groupId = 'com.github.trufla-technology' //your git id
+                artifactId = 'android-tru-forms' //your-repository
+                version = 'v2.21-alpha101' // As same as the Tag
+            }
+        }
+    }
+}
